--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -64,7 +64,7 @@ p { margin: 10px 0;}
 /*@font-face
 { font-family: SiyuanFont;src: url('../font/SOURCEHANSANSCN-REGULAR_3.OTF');}*/
 
-body { color: #000;/*整站默认颜色*/ font-size: 16px;/*整站默认字体大小*/ line-height: 1.5; font-family: Microsoft YaHei,Arial,Verdana,sans-serif;}
+body { color: #000;/*整站默认颜色*/ font-size: 14px;/*整站默认字体大小*/ line-height: 1.5; font-family: Microsoft YaHei,Arial,Verdana,sans-serif;height: 100%;}
 /*.wrap { width: 100%; margin: 0 auto;max-width: 1200px;}*/
 .wrap{padding-left: 120px;padding-right: 120px;}
 .wrap2{padding-left: 250px;padding-right: 250px;}
